--- a/package.json
+++ b/package.json
@@ -3,20 +3,43 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 2005",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start -p 2005",
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@types/react-redux": "^7.1.16",
+    "axios": "^0.21.1",
+    "mongodb": "^3.6.2",
     "next": "11.0.1",
+    "prettier": "2.0.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "swr": "^0.5.6"
+
   },
   "devDependencies": {
+    "@types/jest": "^26.0.23",
+    "@types/mongodb": "^3.5.27",
+    "@types/node": "latest",
     "@types/react": "17.0.11",
+    "@types/react-dom": "latest",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-prettier": "3.1.3",
+    "eslint-plugin-react": "^7.24.0",
+    "jest": "^27.0.5",
+    "ts-jest": "^27.0.3",
+    "ts-node": "^10.0.0",
     "typescript": "4.3.4"
   }
 }
